[gd_scene load_steps=13 format=3 uid="uid://c7j5jqynag4uw"]

[ext_resource type="Script" uid="uid://b13rnxpo5kt4b" path="res://addons/my-ecosystem-template/transitions/scene_transition_manager.gd" id="1_lnxw6"]
[ext_resource type="Shader" uid="uid://cxnlsq7fn1k7y" path="res://addons/my-ecosystem-template/transitions/wipe.gdshader" id="2_3fec7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t7n6f"]
shader = ExtResource("2_3fec7")
shader_parameter/progress = 0.0
shader_parameter/smoothness = 0.0010000000475
shader_parameter/direction = Vector2(1, -0.5)
shader_parameter/wipe_color = Color(0.1, 0.5, 0.5, 1)

[sub_resource type="Animation" id="Animation_8o81u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OnScreenEffectsRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TransitionRect:material:shader_parameter/progress")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TransitionRect:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0p84c"]
resource_name = "circleIn"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionRect:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_y8vgw"]
resource_name = "circleOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionRect:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_7cxrl"]
resource_name = "fadeToBlack"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_i0ik4"]
resource_name = "fadeToNormal"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qqa86"]
resource_name = "slightFlash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OnScreenEffectsRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xltns"]
resource_name = "wipeToColor"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionRect:material:shader_parameter/progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.56666666, 0.90134144),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.0, -1.0, 2.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TransitionRect:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.56666666),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.141592653589793]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mvkca"]
_data = {
&"RESET": SubResource("Animation_8o81u"),
&"circleIn": SubResource("Animation_0p84c"),
&"circleOut": SubResource("Animation_y8vgw"),
&"fadeToBlack": SubResource("Animation_7cxrl"),
&"fadeToNormal": SubResource("Animation_i0ik4"),
&"slightFlash": SubResource("Animation_qqa86"),
&"wipeToColor": SubResource("Animation_xltns")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4f8eu"]
shader = ExtResource("2_3fec7")
shader_parameter/progress = 2.0
shader_parameter/smoothness = 0.00999999977648
shader_parameter/direction = Vector2(1, -0.5)
shader_parameter/wipe_color = Color(0.6043167, 0.63788235, 0.35008368, 1)

[node name="TransitionScreen" type="CanvasLayer"]
process_mode = 3
layer = 99
script = ExtResource("1_lnxw6")

[node name="TransitionRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_t7n6f")
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
color = Color(0, 0, 0, 1)

[node name="TransitionPlayer" type="AnimationPlayer" parent="TransitionRect"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_mvkca")
}

[node name="OnScreenEffectsRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EffectsPlayer" type="AnimationPlayer" parent="OnScreenEffectsRect"]
root_node = NodePath("../..")

[node name="ShaderRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_4f8eu")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[connection signal="animation_finished" from="TransitionRect/TransitionPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="OnScreenEffectsRect/EffectsPlayer" to="." method="_on_animation_player_animation_finished"]
